--- a/pages/jazz.html
+++ b/pages/jazz.html
@@ -25,6 +25,7 @@
 
   <!-- LISTA DE MÚSICAS COM CAMINHO CORRETO -->
   <main>
+    <!-- VERSÃO ESTILIZADA ATUALIZADA em 02/07 -->
     <div class="song-grid">
       <!-- Música 1 - GERALD ALBRIGHT -->
       <div class="song-card" data-song="gerald-albright_georgia-on-my-mind" data-url="../audios/gerald-albright_georgia-on-my-mind.mp3">
